src/objects/Sa__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_To__c</fullName>
        <label>Credited To</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>SALARY DETAILS</relationshipLabel>
        <relationshipName>SALARY_DETAILS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <label>Special Allowance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SALARY DETAILS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALARY DETAILS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_Acnt_number_once_set_cant_be_chngd</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(  Bank_Account_Number__c  )</errorConditionFormula>
        <errorMessage>Bank Account number once set cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_account_details_cannot_be_null</fullName>
        <active>false</active>
        <description>Bank account details cannot be null.</description>
        <errorConditionFormula>Bank_Details__c == null</errorConditionFormula>
        <errorMessage>Bank account details cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_cannot_be_processed_for_inactive</fullName>
        <active>false</active>
        <description>Salary cannot be processed for inactive employees.”</description>
        <errorConditionFormula>Credited_To__r.Is_Active__c  = FALSE</errorConditionFormula>
        <errorMessage>Salary cannot be processed for inactive employees</errorMessage>
    </validationRules>
</CustomObject>